# ETL_FASTAPI_backend

./: .env.example  .gitignore  README.md  pyproject.toml
jobs/: file_structure.txt  jobs_list.txt
scripts/: seed_demo_data.py  seed_demo_events.py
src/living_systems_observatory.egg-info/: PKG-INFO  SOURCES.txt
src/lso/: logging_config.py  main.py  settings.py
src/lso/api/: routes_events.py  routes_metrics.py  routes_systems.py  schemas.py
src/lso/core/: health.py  metrics.py  windowing.py
src/lso/db/: connection.py  migrate.py  queries.py
test/: test_api_smoke.py  test_health.py  test_metrics.py  test_windowing.py
